--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -830,6 +830,9 @@ body {
         @media (max-width: 991px) {
             .mobile-hidden{
                 display: none;
+                img {
+                    padding-right: 2%;
+                }
             }
         }
         @media (min-width: 992px) {
