hamburger-menu-fix

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -72,9 +72,12 @@ body {
                 line-height: 22px;
                 color: #0F0F0F;
             }
+            .navbar-collapse{
+                border: none;
+            }
             .collapse {
-                text-align: center;
-                padding-left: 8%;
+                // text-align: center;
+                // padding-left: 8%;
             }
             @media (max-width: 991px) {
                 .mobile-hidden{
@@ -82,6 +85,9 @@ body {
                 }
             }
             @media (max-width: 767px) {
+                .navbar-right {
+                    padding-left: 8%;
+                }
                 .logo {
                     margin-left: 5%;
                 }
